logs/massweb.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/html5lib'...
Listing './lib/python3.5/site-packages/html5lib/_trie'...
Listing './lib/python3.5/site-packages/html5lib/filters'...
Listing './lib/python3.5/site-packages/html5lib/treeadapters'...
Listing './lib/python3.5/site-packages/html5lib/treebuilders'...
Listing './lib/python3.5/site-packages/html5lib/treewalkers'...
Listing './lib/python3.5/site-packages/html5lib-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/massweb'...
Listing './lib/python3.5/site-packages/massweb/fuzz_generators'...
Listing './lib/python3.5/site-packages/massweb/fuzzers'...
Compiling './lib/python3.5/site-packages/massweb/fuzzers/bsqli_fuzzer.py'...
***   File "./lib/python3.5/site-packages/massweb/fuzzers/bsqli_fuzzer.py", line 278
    print result
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/massweb/fuzzers/ifuzzer.py'...
***   File "./lib/python3.5/site-packages/massweb/fuzzers/ifuzzer.py", line 106
    print ifuz.append_to_param(url, param, append_string)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/massweb/fuzzers/web_fuzzer.py'...
***   File "./lib/python3.5/site-packages/massweb/fuzzers/web_fuzzer.py", line 217
    print "Targets list pre post detrmination:"
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/massweb/hadoop-utils'...
Compiling './lib/python3.5/site-packages/massweb/hadoop-utils/massweb_mapper.py'...
***   File "./lib/python3.5/site-packages/massweb/hadoop-utils/massweb_mapper.py", line 33
    print urlparse(r.fuzzy_target.url).netloc + "\t" + str(r)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/massweb/hadoop-utils/massweb_reducer.py'...
***   File "./lib/python3.5/site-packages/massweb/hadoop-utils/massweb_reducer.py", line 29
    print previous_domain + "\t" +  json.dumps(previous_domain_vuln_list)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/massweb/hadoop-utils/massweb_simple_reducer.py'...
***   File "./lib/python3.5/site-packages/massweb/hadoop-utils/massweb_simple_reducer.py", line 12
    print domain_in + "\t" + result_dic_in
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/massweb/mass_requests'...
Compiling './lib/python3.5/site-packages/massweb/mass_requests/mass_request.py'...
***   File "./lib/python3.5/site-packages/massweb/mass_requests/mass_request.py", line 413
    print target, r[1]
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/massweb/mass_requests/response_analysis.py'...
***   File "./lib/python3.5/site-packages/massweb/mass_requests/response_analysis.py", line 63
    print parse_worthy(r)
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/massweb/masscrawler'...
Listing './lib/python3.5/site-packages/massweb/payloads'...
Compiling './lib/python3.5/site-packages/massweb/payloads/bsqli_payload.py'...
***   File "./lib/python3.5/site-packages/massweb/payloads/bsqli_payload.py", line 15
    print x.payload_attributes
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/massweb/payloads/payload.py'...
***   File "./lib/python3.5/site-packages/massweb/payloads/payload.py", line 24
    print "equal"
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/massweb/pnk_net'...
Compiling './lib/python3.5/site-packages/massweb/pnk_net/find_post.py'...
***   File "./lib/python3.5/site-packages/massweb/pnk_net/find_post.py", line 107
    print p, p.data
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/massweb/proxy_rotator'...
Compiling './lib/python3.5/site-packages/massweb/proxy_rotator/proxy_rotate.py'...
***   File "./lib/python3.5/site-packages/massweb/proxy_rotator/proxy_rotate.py", line 9
    print get_random_proxy([{"http" : "127.0.0.1"}, {"http" : "127.0.0.2"}])
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/massweb/results'...
Listing './lib/python3.5/site-packages/massweb/targets'...
Compiling './lib/python3.5/site-packages/massweb/targets/crawl_target.py'...
***   File "./lib/python3.5/site-packages/massweb/targets/crawl_target.py", line 15
    print ct.ttype
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/massweb/targets/fuzzy_target.py'...
***   File "./lib/python3.5/site-packages/massweb/targets/fuzzy_target.py", line 18
    print "exception"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/massweb/targets/target.py'...
***   File "./lib/python3.5/site-packages/massweb/targets/target.py", line 18
    print "exception"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/massweb/vuln_checks'...
Compiling './lib/python3.5/site-packages/massweb/vuln_checks/match.py'...
***   File "./lib/python3.5/site-packages/massweb/vuln_checks/match.py", line 41
    print parse_match(x, "script", "t")
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/massweb-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/webencodings'...
Listing './lib/python3.5/site-packages/webencodings-0.5.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
